deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-vue-adminx
  labels:
    name: django-vue-adminx
